# async-bincode

./: .travis.yml  Cargo.toml  README.md  README.tpl
.github/workflows/: check.yml  msrv.yml  test.yml
src/: futures.rs  lib.rs  reader.rs  stream.rs  tokio.rs  writer.rs
