[package]
name = "async-bincode"
version = "0.7.3"
edition = "2021"

description = "Asynchronous access to a bincode-encoded item stream."
readme = "README.md"

authors = [
	"Jon Gjengset <jon@thesquareplanet.com>",
	"Jonathan Behrens <behrensj@mit.edu>"
]

homepage = "https://github.com/jonhoo/async-bincode"
repository = "https://github.com/jonhoo/async-bincode.git"

keywords = ["asynchronous", "tokio", "bincode", "serialization"]
categories = ["asynchronous", "encoding", "network-programming"]

license = "MIT/Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tokio"]
futures = ["futures-io"]

[dependencies]
bincode = "2.0.0"
byteorder = "1.0.0"
futures-core = "0.3.0"
futures-io = { version = "0.3.21", optional = true }
futures-sink = "0.3.0"
serde = "1.0.8"
tokio = { version = "1.0", features = ["net"], optional = true }
bytes = "1.0"

# to make -Zminimal-versions work
[target.'cfg(any())'.dependencies]
async-global-executor = { version = "2.4.1", optional = true }
async-executor = { version = "1.9.0", optional = true }

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
futures = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
